[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://player_1.gd" type="Script" id=2]

[node name="player_1" type="Node"]
script = ExtResource( 2 )

[node name="player" type="Node" parent="."]

[node name="slot_1" type="Sprite" parent="player"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 704, 48 )
scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="slot_2" type="Sprite" parent="player"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 704, 176 )
scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="slot_3" type="Sprite" parent="player"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 704, 304 )
scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="slot_4" type="Sprite" parent="player"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 704, 432 )
scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="slot_5" type="Sprite" parent="player"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 704, 560 )
scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="enemy" type="Node" parent="."]

[node name="enemy_slot1" type="Button" parent="enemy"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 1664.0
margin_top = 16.0
margin_right = 1740.0
margin_bottom = 86.0
rect_scale = Vector2( 1.5, 1.5 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_slot2" type="Button" parent="enemy"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 1664.0
margin_top = 144.0
margin_right = 1740.0
margin_bottom = 214.0
rect_scale = Vector2( 1.5, 1.5 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_slot3" type="Button" parent="enemy"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 1664.0
margin_top = 272.0
margin_right = 1740.0
margin_bottom = 342.0
rect_scale = Vector2( 1.5, 1.5 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_slot4" type="Button" parent="enemy"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 1664.0
margin_top = 400.0
margin_right = 1740.0
margin_bottom = 470.0
rect_scale = Vector2( 1.5, 1.5 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_slot5" type="Button" parent="enemy"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 1664.0
margin_top = 528.0
margin_right = 1740.0
margin_bottom = 598.0
rect_scale = Vector2( 1.5, 1.5 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack" type="Node" parent="."]

[node name="attack_1" type="Button" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 624.0
margin_top = 624.0
margin_right = 700.0
margin_bottom = 694.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_2" type="Button" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 800.0
margin_top = 624.0
margin_right = 876.0
margin_bottom = 694.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_3" type="Button" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 976.0
margin_top = 624.0
margin_right = 1052.0
margin_bottom = 694.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_2_charge" type="TextureProgress" parent="."]
visible = false
modulate = Color( 0.992157, 1, 0.0156863, 1 )
margin_left = 800.0
margin_top = 576.0
margin_right = 880.0
margin_bottom = 640.0
rect_scale = Vector2( 2, 0.5 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_3_charge" type="TextureProgress" parent="."]
visible = false
modulate = Color( 0.992157, 1, 0.0156863, 1 )
margin_left = 976.0
margin_top = 576.0
margin_right = 1056.0
margin_bottom = 640.0
rect_scale = Vector2( 2, 0.5 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="other" type="Node" parent="."]

[node name="current_character" type="Sprite" parent="other"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 1860.5, 75.5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="targeted_character" type="Sprite" parent="other"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 2148.5, 75.5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[connection signal="pressed" from="enemy/enemy_slot1" to="." method="_on_enemy_slot1_pressed"]
[connection signal="pressed" from="enemy/enemy_slot2" to="." method="_on_enemy_slot2_pressed"]
[connection signal="pressed" from="enemy/enemy_slot3" to="." method="_on_enemy_slot3_pressed"]
[connection signal="pressed" from="enemy/enemy_slot4" to="." method="_on_enemy_slot4_pressed"]
[connection signal="pressed" from="enemy/enemy_slot5" to="." method="_on_enemy_slot5_pressed"]
[connection signal="pressed" from="attack_1" to="." method="_on_attack_1_pressed"]
[connection signal="pressed" from="attack_2" to="." method="_on_attack_2_pressed"]
[connection signal="pressed" from="attack_3" to="." method="_on_attack_3_pressed"]
